force-app/main/default/objects/Budget_Year__c/Budget_Year__c.object-meta.xml
<CustomObject>
    <label>שנת תקציב</label>
    <nameField>
        <label>שנת תקציב</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>שנות תקציב</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>