force-app/main/default/objects/Budget_Year__c/fields/Budget_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Start_Date__c</fullName>
    <inlineHelpText>1/10</inlineHelpText>
    <label>תאריך התחלה</label>
    <type>Date</type>
</CustomField>