force-app/main/default/objects/Budget_Year__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>(DATE(YEAR(Budget_Start_Date__c )+1, MONTH(Budget_Start_Date__c ), DAY(Budget_Start_Date__c )))-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>תאריך סיום</label>
    <type>Date</type>
</CustomField>