force-app/main/default/objects/Budget_Year__c/fields/Menora_Commission__c.field-meta.xml
<CustomField>
    <fullName>Menora_Commission__c</fullName>
    <label>מנורה עמלת חובה</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>