force-app/main/default/objects/Budget_Year__c/listViews/View.listView-meta.xml
<ListView>
    <fullName>View</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>הכל</label>
</ListView>